# magpurify2

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  setup.py
.github/workflows/: build_website.sh  build_wheels.yaml  deploy_website.yaml  prepare_build.sh  prepare_cibuildwheel.sh
assets/css/: 0.styles.0c8387cc.css  0.styles.267ac4f2.css  0.styles.29bf9d1c.css  0.styles.2c109145.css  0.styles.38c5c49e.css  0.styles.41e306cc.css  0.styles.4522dc04.css  0.styles.5bcd5250.css  0.styles.e2e1409a.css
assets/js/: 10.02667f9d.js  10.195b8e38.js  10.27be4b5d.js  10.309d6cd5.js  10.34f956c0.js  10.4286a581.js  10.46236364.js  10.8d826114.js  10.91fc1155.js  10.a7534c82.js  10.a978a861.js  10.b4d84888.js  10.c2038252.js  10.cdc63fe4.js  10.ce51bca0.js  10.db79c0da.js  10.e77f0d77.js  10.f84cb57f.js  11.13e4558c.js  11.333c7d6d.js  11.36e3da23.js  11.48fac3ec.js  11.500de058.js  11.51a5910b.js  11.6f38cab7.js  11.7c3c7c71.js  11.8a9aad77.js  11.9067d9bb.js  11.a668fbe2.js  11.deecb322.js  12.01320b95.js  12.38fc1a6a.js  12.58dc8959.js  12.713176df.js  12.9fb19d23.js  12.e3a7027d.js  12.f4198775.js  12.f7534051.js  (+473 more)
docs/: codon-usage-theory.html  composition-theory.html  composition.html  contaminant-detection.html  coverage-theory.html  coverage.html  index.html  installation.html  usage.html
guide/: index.html  installation.html  usage.html
magpurify2/: __init__.py  cli.py  core.py  external.py  main.py  tools.py
src/: codon.rs  composition.rs  coverage.rs  lib.rs  mmseqs2.rs  tnf.rs
website/: README.md  package.json
(+35 files in other folders)
