[package]
name = "magpurify2"
version = "0.1.0"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2018"

[lib]
name = "magpurify2"
crate-type = ["cdylib"]

[dependencies]
coverm = "0.3.2"
ndarray = "0.13.0"
numpy = "0.8.0"
pyo3 = { version = "0.9.2", features = ["extension-module"] }
rayon = "1.3.0"
