[package]
name = "magpurify2"
version = "1.0.0"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2018"

[lib]
name = "magpurify2"
crate-type = ["cdylib"]

[dependencies]
coverm = "0.3.2"
csv = "1.1.3"
lazy_static = "1.4.0"
ndarray = "0.13.1"
numpy = "0.11.0"
pyo3 = { version = "0.11.1", features = ["extension-module"] }
rayon = "1.4.1"